# cdk-template

./: .env.exemple  .gitignore  LICENSE  Makefile  README.md  app.py  cdk.json  package-lock.json  package.json  pyproject.toml
core/: __init__.py
core/service/: __init__.py  stack.py
core/service/constructs/: __init__.py  compute.py
tests/: test_app.py
