[project]
name = "cdk-template"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.0.0,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "ruff>=0.5.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["core*"]
exclude = [
    "tests*",
    "node_modules*",
    "cdk.out*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".jsii-cache",
    ".pycache",
    ".tools",
    ".venv",
    "cdk.out",
    "node_modules",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
